--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     crossorigin="anonymous" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/public/favicon.ico" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
