--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/public/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="apple-touch-icon" href="/public/logo.png" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
